06_rect/grade.txt
Grading at Sun 03 Mar 2024 08:33:17 AM UTC
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:51:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   51 |     return (rectangle)(0,0,0,0);
      |                         ^
rectangle.c:51:27: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   51 |     return (rectangle)(0,0,0,0);
      |                           ^
rectangle.c:51:29: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   51 |     return (rectangle)(0,0,0,0);
      |                             ^
rectangle.c:51:5: error: conversion to non-scalar type requested
   51 |     return (rectangle)(0,0,0,0);
      |     ^~~~~~
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
